--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,4 @@
-[package]
-name = "dcpu16"
-version = "0.1.0"
-authors = ["SethDusek <shibe@openmailbox.org>"]
-
-[dependencies]
+[workspace]
+members = ["dcpu", "dcpu_macros"]
+[profile.dev]
+debug-assertions = false
